Fix reloading of the configuration from HTTP(S)
The `HttpWatcher` didn't propagate the observed
last modification time back to the configuration.
As a result, each new configuration was already
deprecated when it started and the reconfiguration
process looped.

Closes #2937

Rewrite Jetty tests using WireMock

Closes #2813

Co-authored-by: Volkan Yazıcı <volkan@yazi.ci>